Customers Detail + Employees Module

--- a/bankmanager-web/src/assets/i18n/en.json
+++ b/bankmanager-web/src/assets/i18n/en.json
@@ -20,5 +20,26 @@
   "SURNAME": "Surname",
   "STARTDATE": "Start date",
   "EMAIL": "Email",
-  "PHOTO": "Photo"
+  "PHOTO": "Photo",
+  "CUSTOMER_PERSONAL_INFORMATION": "Personal Information",
+  "CUSTOMERID": "Customer Id.",
+  "PHONE": "Phone",
+  "CUSTOMERTYPEID": "Customer type",
+  "ADDRESS": "Address",
+  "LONGITUDE": "Longitude",
+  "LATITUDE": "Latitude",
+  "COMMENTS": "Comments",
+  "EMPLOYEES": "Employees",
+  "EMPLOYEEID": "Employee Id.",
+  "EMPLOYEETYPEID": "Employee type",
+  "EMPLOYEENAME": "Name",
+  "EMPLOYEESURNAME": "Surname",
+  "EMPLOYEEADDRESS": "Address",
+  "EMPLOYEECOMMENTS": "Comments",
+  "EMPLOYEESTARTDATE": "Start date",
+  "EMPLOYEEPHOTO": "Photo",
+  "EMPLOYEEEMAIL": "Mail",
+  "OFFICEID": "Office",
+  "EMPLOYEEPHONE": "Phone",
+  "EMPLOYEE_PERSONAL_INFORMATION": "Employee details"
 }
