--- a/bankmanager-web/src/assets/i18n/es.json
+++ b/bankmanager-web/src/assets/i18n/es.json
@@ -20,5 +20,26 @@
   "SURNAME": "Apellido",
   "STARTDATE": "Fecha inicio",
   "EMAIL": "Correo",
-  "PHOTO": "Fotografía"
+  "PHOTO": "Fotografía",
+  "CUSTOMER_PERSONAL_INFORMATION": "Información personal",
+  "CUSTOMERID": "Id. cliente",
+  "PHONE": "Teléfono",
+  "CUSTOMERTYPEID": "Tipo cliente",
+  "ADDRESS": "Dirección",
+  "LONGITUDE": "Longitud",
+  "LATITUDE": "Latitud",
+  "COMMENTS": "Comentarios",
+  "EMPLOYEES": "Empleados",
+  "EMPLOYEEID": "Id. Empleado",
+  "EMPLOYEETYPEID": "Tipo de empleado",
+  "EMPLOYEENAME": "Nombre",
+  "EMPLOYEESURNAME": "Apellidos",
+  "EMPLOYEEADDRESS": "Dirección",
+  "EMPLOYEECOMMENTS": "Comentarios",
+  "EMPLOYEESTARTDATE": "Fecha de inicio",
+  "EMPLOYEEPHOTO": "Fotografía",
+  "EMPLOYEEEMAIL": "Correo",
+  "OFFICEID": "Oficina",
+  "EMPLOYEEPHONE": "Teléfono",
+  "EMPLOYEE_PERSONAL_INFORMATION": "Detalles empleado"
 }
