Column Renderer + Calculated column

--- a/bankmanager-web/src/assets/i18n/en.json
+++ b/bankmanager-web/src/assets/i18n/en.json
@@ -49,5 +49,7 @@
   "ANID": "Account",
   "ENDDATE": "End date",
   "INTERESRATE": "% Interest",
-  "ACCOUNTTYPE": "Account type"
+  "ACCOUNTTYPE": "Account type",
+  "ACCOUNTNUMBER": "Account number",
+  "INTERESRATE_MONTHLY": "Monthly interest rate"
 }
